# warlock

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI-REFERENCE.md  CONTRIBUTING.md  DEMO.md  DOCUMENTATION_AUDIT_COMPLETE.txt  DOCUMENTATION_REPORT.md  Dockerfile  LICENSE  Makefile  README.md  Warlock Demo.command  alembic.ini  app.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  compliance-gate.yaml
alembic/: env.py
docs/: DATALAKE_TODO.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_ASSESSMENT_SUMMARY.md  DOCUMENTATION_ENHANCEMENT_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_TODO.md  MASTER_ROADMAP.md  MASTER_TODO.md  QUICK_WINS.md  README.md  SCHEMA.md  TODO.md  air-gapped.md  audit-report-2026-03-19.md  gap-analysis.md  known-drift.md  opa-integration.md  pii-scrubbing-factsheet.md  risk-enhancement-report.md  strategic-enhancement-report-2026-03-19.md  warlock-one-pager.html  warlock-one-pager.md
docs/architecture/: ARCHITECTURE.md  GAPS.md  STUBS.md  SUMMARY.md  telemetry-datalake.py
docs/demo/: TODO-product-gaps.md  index.html
docs/operations/: backup-and-dr.md
docs/review/: critical-findings.md  high-findings.md  low-findings.md  medium-findings.md
frameworks-oscal/: README.md
frameworks-oscal/cmmc-oscal/: README.md  profile.json
frameworks-oscal/eu-ai-act-oscal/: README.md  profile.json
frameworks-oscal/fedramp-oscal/: README.md  profile.json
frameworks-oscal/gdpr-oscal/: README.md  profile.json
frameworks-oscal/hipaa-oscal/: README.md  profile.json
frameworks-oscal/iso-27001-oscal/: README.md  profile.json
frameworks-oscal/iso-27701-oscal/: README.md  profile.json
frameworks-oscal/iso-42001-oscal/: README.md  profile.json
frameworks-oscal/nist-800-53-oscal/: README.md  profile.json
frameworks-oscal/nist-csf-oscal/: README.md  profile.json
frameworks-oscal/pci-dss-oscal/: profile.json
frameworks-oscal/sec-cyber-oscal/: README.md  profile.json
frameworks-oscal/soc2-oscal/: README.md  profile.json
frameworks-oscal/unified-controls-framework/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
policies/eu_ai_act/: ai_risk_classification.rego  ai_risk_classification_test.rego  art10_data_governance.rego  art10_data_governance_test.rego  art11_technical_documentation.rego  art11_technical_documentation_test.rego  art13_transparency.rego  art13_transparency_test.rego  art14_human_oversight.rego  art14_human_oversight_test.rego  art15_accuracy_robustness.rego  art15_accuracy_robustness_test.rego  art17_quality_management.rego  art17_quality_management_test.rego  art52_transparency_obligations.rego  art52_transparency_obligations_test.rego  art9_risk_management.rego  art9_risk_management_test.rego
policies/fedramp/: ac_access_control.rego  ac_access_control_test.rego  au_audit_logging.rego  au_audit_logging_test.rego  baseline_controls.rego  baseline_controls_test.rego  cm_configuration_management.rego  cm_configuration_management_test.rego  ir_incident_response.rego  ir_incident_response_test.rego  sc_system_communications.rego  sc_system_communications_test.rego  si_system_integrity.rego  si_system_integrity_test.rego
policies/gdpr/: art17_right_to_erasure.rego  art17_test.rego  art25_data_protection_by_design.rego  art25_test.rego  art28_processor.rego  art28_test.rego  art30_records_of_processing.rego  art30_test.rego  art32_security_of_processing.rego  art32_test.rego  art33_breach_notification.rego  art33_test.rego  art35_dpia.rego  art35_test.rego  art5_principles.rego  art5_test.rego  art6_lawful_basis.rego  art6_test.rego  data_protection.rego
policies/iso_27701/: breach_notification.rego  breach_notification_test.rego  consent_management.rego  consent_management_test.rego  data_subject_rights.rego  data_subject_rights_test.rego  data_transfer.rego  data_transfer_test.rego  pia_privacy_impact.rego  pia_privacy_impact_test.rego  privacy_controls.rego  privacy_controls_test.rego
policies/iso_42001/: ai_governance.rego  ai_governance_test.rego  data_management.rego  data_management_test.rego  model_lifecycle.rego  model_lifecycle_test.rego  responsible_ai.rego  responsible_ai_test.rego
policies/pci-dss/: r10_logging.rego  r10_test.rego  r11_test.rego  r11_testing.rego  r12_policy.rego  r12_test.rego  r1_network_security.rego  r1_test.rego  r2_secure_config.rego  r2_test.rego  r3_stored_data.rego  r3_test.rego  r4_crypto_transit.rego  r4_test.rego  r5_malware.rego  r5_test.rego  r6_secure_dev.rego  r6_test.rego  r7_access_control.rego  r7_test.rego  r8_test.rego  (+3 more)
proddocs/: README.md
scripts/: add_monitoring_frequency.py  check-secrets.sh  demo.sh  demo_api.sh  demo_connectors_expansion.py  demo_connectors_new.py  demo_data.py  demo_seed.py  docker-demo.sh  gen_remediation.py  pre-commit-qa.sh  qa.sh  verify_docs.py
seed_expansions/: phase2_zero_data_gaps.py  phase3_time_depth.py  phase5_scenario_richness.py
static/: index.html
tests/: conftest.py  test_api.py  test_batch_assessor.py  test_cli_commands.py  test_connector_validation.py  test_consumption.py  test_critical_paths.py  test_domain_cli.py  test_domain_services.py  test_domains.py  test_duckdb_feasibility.py  test_full_pipeline.py  test_integration_e2e.py  test_lake.py  test_lake_ask.py  test_lake_domains.py  test_lake_hardening.py  test_lake_maintenance.py  test_lake_readers.py  test_lake_writer.py  test_mcp_tools.py  test_new_connectors.py  test_oltp_thin.py  test_opa_engine.py  test_phase1.py  test_phases2_5.py  test_pii.py  test_pipeline.py  test_policy_engine.py  test_repository_migration.py  test_schema_registry.py  test_security_fixes.py  test_shadow_queries.py  test_sso.py  test_unit.py
todo/: 686-command-test-results.md  BACKLOG.md  DEVELOPMENT-PLAN.md  MASTER-TODO.md  README.md  TODO.md  capability-gaps.md  capability-matrix.md  run1-pipeline-demo.md  run3-security-compliance.md  warlock-issues.md
warlock/: __init__.py  cli.py  config.py  i18n.py  lambda_handler.py  logging_config.py
(+2581 files in other folders)
