[project]
name = "warlock"
version = "2.0.0a1"
description = "Compliance telemetry pipeline"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.9",
    "uvicorn>=0.30",
    "bcrypt>=4.1",          # #14: Password hashing (was optional, now required)
    "PyJWT>=2.8",           # #14: JWT tokens (was optional, now required)
    "cryptography>=42.0",   # #14: Fernet field encryption (was optional, now required)
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
azure = [
    "azure-identity>=1.16",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-policyinsights>=1.0",
    "azure-mgmt-security>=6.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-keyvault>=10.0",
    "azure-mgmt-storage>=21.0",
    "azure-mgmt-monitor>=6.0",
    "azure-mgmt-alertsmanagement>=2.0",
]
gcp = [
    "google-cloud-asset>=3.26",
    "google-cloud-securitycenter>=1.30",
    "google-cloud-resource-manager>=1.12",
    "google-cloud-compute>=1.18",
]
ai = []  # codebase uses raw httpx; no SDK deps needed
monitoring = ["prometheus-client>=0.20"]
lake = ["duckdb>=1.1", "pyarrow>=17.0", "pyiceberg[pyarrow]>=0.7", "nats-py>=2.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pip-audit>=2.7"]

[project.scripts]
warlock = "warlock.cli:cli"
warlock-api = "warlock.api.app:run_server"

[tool.setuptools.packages.find]
include = ["warlock*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
