[project]
name = "warlock"
version = "2.0.0a1"
description = "Compliance telemetry pipeline"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.9",
    "uvicorn>=0.30",
    "bcrypt>=4.1",          # #14: Password hashing (was optional, now required)
    "PyJWT>=2.8",           # #14: App JWT (login/session tokens) — encode/decode
    "cryptography>=42.0",   # #14: Fernet field encryption (was optional, now required)
    "openpyxl>=3.1",        # RPT-3: Excel export
    "python-jose[cryptography]>=3.3",  # INT-1: OIDC JWT validation (external IdP tokens)
    "textual>=3.0",                    # TUI: interactive terminal dashboard
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
azure = [
    "azure-identity>=1.16",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-policyinsights>=1.0",
    "azure-mgmt-security>=6.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-keyvault>=10.0",
    "azure-mgmt-storage>=21.0",
    "azure-mgmt-monitor>=6.0",
    "azure-mgmt-alertsmanagement>=2.0",
]
gcp = [
    "google-cloud-asset>=3.26",
    "google-cloud-securitycenter>=1.30",
    "google-cloud-resource-manager>=1.12",
    "google-cloud-compute>=1.18",
]
ai = []  # codebase uses raw httpx; no SDK deps needed
analytics = ["numpy>=2.0", "pandas>=2.0"]
monitoring = ["prometheus-client>=0.20"]
lake = ["duckdb>=1.1", "pyarrow>=17.0", "pyiceberg[pyarrow]>=0.7", "nats-py>=2.7", "pytz>=2024.1"]
pdf = ["weasyprint>=62.0"]
graphql = ["strawberry-graphql[fastapi]>=0.220"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "reportlab>=4.0",
]

[project.scripts]
warlock = "warlock.cli:cli"
warlock-api = "warlock.api.app:run_server"

[tool.setuptools.packages.find]
include = ["warlock*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "UP007",  # use X | Y for union — already using this, but some generated code doesn't
    "UP017",  # datetime.UTC alias — project standardizes on timezone.utc (CLAUDE.md)
    "UP035",  # import from collections.abc — low value churn
    "UP037",  # remove quotes from type annotations — low value churn
    "UP045",  # use X | Y in type alias — some compat concerns
    "RUF012", # mutable class variable — many dataclass patterns rely on this
    "SIM102", # collapsible if — nested ifs are often clearer for complex conditions
    "SIM105", # use contextlib.suppress — less explicit than try/except pass
    "SIM108", # ternary instead of if-else — reduces readability in complex cases
    "B007",   # unused loop variable — _ convention not always followed
    "B905",   # zip strict — would break existing code without careful review
    "B904",   # raise from — too noisy in except-log-raise patterns
    "RUF005", # concat vs unpacking — style preference
    "RUF003", # ambiguous unicode — false positives on legitimate strings
    "RUF006", # store create_task reference — not needed for fire-and-forget
    "RUF013", # implicit Optional — existing pattern, low risk
    "RUF059", # unused unpacked variable — underscore convention not enforced
    "SIM101", # merge isinstance — readability tradeoff
    "SIM103", # return condition directly — explicit if/return is clearer
    "SIM110", # use any() — explicit loop is clearer for complex conditions
    "SIM115", # use context manager for open() — not always applicable
    "SIM117", # combine with statements — readability tradeoff
    "SIM118", # use key in dict — .keys() is explicit and fine
    "SIM401", # use dict.get default — if/else is clearer for tuple defaults
    "UP031",  # use f-string — % formatting is fine in logging
    "UP042",  # use StrEnum — requires careful migration
    "UP046",  # use type params — requires Python 3.12+ generic syntax migration
    "B027",   # empty method in abstract class — intentional no-op defaults
    "RUF034", # useless if-else — edge case disagreements
]

[tool.ruff.lint.per-file-ignores]
"scripts/demo_seed.py" = ["E", "W", "B", "SIM"]  # 23k-line generated seed — lint incrementally
"warlock/db/migrations/*.py" = ["E", "W"]          # Alembic auto-generated migrations
"tests/*" = ["B011"]                                # assert False is fine in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # too strict for initial rollout — enable incrementally
check_untyped_defs = true
ignore_missing_imports = true  # many optional deps won't have stubs

[[tool.mypy.overrides]]
module = [
    "warlock.api.*",
    "warlock.db.*",
    "warlock.pipeline.*",
]
disallow_untyped_defs = true
warn_unreachable = true
